[API-170] Adds 'most shared' tracks endpoint (#205)
Returns tracks with the most shares for a given time range. Defaults to
'week'.
