# api/swagger/swagger-v1.yaml
@@ -971,6 +971,57 @@ paths:
         "400":
           description: Bad request
           content: {}
+  /tracks/most-shared:
+    get:
+      tags:
+      - tracks
+      description: Gets the most shared tracks for a given time range
+      operationId: Get Most Shared Tracks
+      parameters:
+      - name: user_id
+        in: query
+        description: The user ID of the user making the request
+        schema:
+          type: string
+      - name: limit
+        in: query
+        description: Number of tracks to fetch
+        schema:
+          type: integer
+          default: 10
+          minimum: 1
+          maximum: 100
+      - name: offset
+        in: query
+        description: The number of items to skip. Useful for pagination (page number
+          * limit)
+        schema:
+          type: integer
+          default: 0
+          minimum: 0
+      - name: time_range
+        in: query
+        description: The time range to consider
+        schema:
+          type: string
+          default: week
+          enum:
+          - week
+          - month
+          - allTime
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/tracks_response'
+        "400":
+          description: Bad request
+          content: {}
+        "500":
+          description: Server error
+          content: {}
   /tracks/search:
     get:
       tags:
